[workspace]
members = ["async-fs-utils", "async-fs-utils-attr", "async-fs-utils-attr-impl"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"

[workspace.dependencies]
futures-core = "0.3.30"
libc = "0.2.158"
log = "0.4.22"
nix = "0.29.0"
paste = "1.0.15"
proc-macro2 = "1.0.86"
quote = "1.0.37"
reflink-at = { git = "https://github.com/axel-lord/reflink-at" }
smallvec = "1.13.2"
syn = "2.0.79"
tokio = "1.40.0"
tokio-stream = "0.1.16"
